updating ML_notebook to remove feature importance, and adding a new notebook for feature importance

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -363,317 +363,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspecting Dataset 12's best model\n"
+    "## Inspecting Dataset 12's best model\n",
+    "Please use `Feature Imporance` notebook to look at feature importance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['dataset_4_', 'dataset_5_', 'dataset_10_'])"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "allDataModelDict.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "feature importance for GBTC\n",
-      "626 features passed to this model\n",
-      "603 unique features passed to this model\n",
-      "58 features given feature importance above 0\n",
-      "\n",
-      "Feature mgrB coefficient/importance 0.48591470186168223\n",
-      "\n",
-      "Feature KP0228_00231 coefficient/importance 0.07680372160651945\n",
-      "\n",
-      "Feature KP0228_02208 coefficient/importance 0.07029989545494189\n",
-      "\n",
-      "Feature KP0228_03719 coefficient/importance 0.06214412028571461\n",
-      "\n",
-      "Feature KP0228_03020 coefficient/importance 0.04416783824449139\n",
-      "\n",
-      "Feature KP0228_04384 coefficient/importance 0.031543031619622894\n",
-      "\n",
-      "Feature KP0228_04079 coefficient/importance 0.027570402982906785\n",
-      "\n",
-      "Feature KP0228_00159 coefficient/importance 0.02406140801954563\n",
-      "\n",
-      "Feature KP0228_03192 coefficient/importance 0.02101588363906948\n",
-      "\n",
-      "Feature KP0228_04594 coefficient/importance 0.020654068747376735\n",
-      "\n",
-      "Feature KP0228_00304 coefficient/importance 0.014833977757083845\n",
-      "\n",
-      "Feature KP0228_03718 coefficient/importance 0.01276861900571488\n",
-      "\n",
-      "Feature KP0228_03593 coefficient/importance 0.009900990242353342\n",
-      "\n",
-      "Feature KP0228_00305 coefficient/importance 0.009495500322824976\n",
-      "\n",
-      "Feature KP0228_00089 coefficient/importance 0.007403217485687199\n",
-      "\n",
-      "Feature KP0228_03517 coefficient/importance 0.006313391263983914\n",
-      "\n",
-      "Feature KP0228_02672 coefficient/importance 0.00609904936518963\n",
-      "\n",
-      "Feature KP0228_04662 coefficient/importance 0.0057777487520697625\n",
-      "\n",
-      "Feature KP0228_01448 coefficient/importance 0.005233813382376191\n",
-      "\n",
-      "Feature KP0228_01514 coefficient/importance 0.004911589467390288\n",
-      "\n",
-      "Feature KP0228_02534 coefficient/importance 0.0049006609845701505\n",
-      "\n",
-      "Feature KP0228_05018 coefficient/importance 0.003236088339252955\n",
-      "\n",
-      "Feature KP0228_04175 coefficient/importance 0.0031976291752866043\n",
-      "\n",
-      "Feature KP0228_02559 coefficient/importance 0.0029683006629640882\n",
-      "\n",
-      "Feature KP0228_00125 coefficient/importance 0.0025377671466945513\n",
-      "\n",
-      "Feature KP0228_00107 coefficient/importance 0.0024993565757763726\n",
-      "\n",
-      "Feature KP0228_00108 coefficient/importance 0.0024633674393552715\n",
-      "\n",
-      "Feature KP0228_01750 coefficient/importance 0.0024103644141003143\n",
-      "\n",
-      "Feature KP0228_03191 coefficient/importance 0.002215884154266736\n",
-      "\n",
-      "Feature KP0228_01059 coefficient/importance 0.0020326078987904536\n",
-      "\n",
-      "Feature KP0228_04168 coefficient/importance 0.0018016836294329182\n",
-      "\n",
-      "Feature KP0228_04943 coefficient/importance 0.0017676182845193181\n",
-      "\n",
-      "Feature KP0228_02598 coefficient/importance 0.0016195064283281684\n",
-      "\n",
-      "Feature KP0228_04305 coefficient/importance 0.0016007064941954115\n",
-      "\n",
-      "Feature KP0228_03536 coefficient/importance 0.0015362917947260748\n",
-      "\n",
-      "Feature KP0228_00801 coefficient/importance 0.0013374767721186392\n",
-      "\n",
-      "Feature KP0228_00036 coefficient/importance 0.0013258049319840328\n",
-      "\n",
-      "Feature KP0228_02659 coefficient/importance 0.0012703069589349333\n",
-      "\n",
-      "Feature KP0228_03050 coefficient/importance 0.0011537103006807024\n",
-      "\n",
-      "Feature KP0228_03634 coefficient/importance 0.0011154881344867934\n",
-      "\n",
-      "Feature KP0228_00233 coefficient/importance 0.0009535150806170257\n",
-      "\n",
-      "Feature KP0228_03971 coefficient/importance 0.0009394591510440611\n",
-      "\n",
-      "Feature KP0228_02544 coefficient/importance 0.0009135187533331438\n",
-      "\n",
-      "Feature KP0228_03164 coefficient/importance 0.0008922912497059481\n",
-      "\n",
-      "Feature KP0228_02232 coefficient/importance 0.0008724036491622505\n",
-      "\n",
-      "Feature KP0228_01638 coefficient/importance 0.0007506718085752294\n",
-      "\n",
-      "Feature KP0228_02223 coefficient/importance 0.0006450234537663087\n",
-      "\n",
-      "Feature KP0228_00250 coefficient/importance 0.0006090090266283757\n",
-      "\n",
-      "Feature KP0228_00995 coefficient/importance 0.0006042221181044781\n",
-      "\n",
-      "Feature KP0228_03775 coefficient/importance 0.00048565563026673\n",
-      "\n",
-      "Feature KP0228_03241 coefficient/importance 0.0004669526138791726\n",
-      "\n",
-      "Feature KP0228_03084 coefficient/importance 0.0004525487907856203\n",
-      "\n",
-      "Feature KP0228_02357 coefficient/importance 0.00040976488291972395\n",
-      "\n",
-      "Feature KP0228_03419 coefficient/importance 0.0004029704695979027\n",
-      "\n",
-      "Feature KP0228_01631 coefficient/importance 0.0003933252574987539\n",
-      "\n",
-      "Feature KP0228_03478 coefficient/importance 0.000286952975970103\n",
-      "\n",
-      "Feature KP0228_02313 coefficient/importance 1.286451191174865e-05\n",
-      "\n",
-      "Feature KP0228_03605 coefficient/importance 5.260549223812085e-06\n",
-      "\n",
-      "featureName,importanceMetric\n",
-      "mgrB,0.48591470186168223\n",
-      "KP0228_00231,0.07680372160651945\n",
-      "KP0228_02208,0.07029989545494189\n",
-      "KP0228_03719,0.06214412028571461\n",
-      "KP0228_03020,0.04416783824449139\n",
-      "KP0228_04384,0.031543031619622894\n",
-      "KP0228_04079,0.027570402982906785\n",
-      "KP0228_00159,0.02406140801954563\n",
-      "KP0228_03192,0.02101588363906948\n",
-      "KP0228_04594,0.020654068747376735\n",
-      "KP0228_00304,0.014833977757083845\n",
-      "KP0228_03718,0.01276861900571488\n",
-      "KP0228_03593,0.009900990242353342\n",
-      "KP0228_00305,0.009495500322824976\n",
-      "KP0228_00089,0.007403217485687199\n",
-      "KP0228_03517,0.006313391263983914\n",
-      "KP0228_02672,0.00609904936518963\n",
-      "KP0228_04662,0.0057777487520697625\n",
-      "KP0228_01448,0.005233813382376191\n",
-      "KP0228_01514,0.004911589467390288\n",
-      "KP0228_02534,0.0049006609845701505\n",
-      "KP0228_05018,0.003236088339252955\n",
-      "KP0228_04175,0.0031976291752866043\n",
-      "KP0228_02559,0.0029683006629640882\n",
-      "KP0228_00125,0.0025377671466945513\n",
-      "KP0228_00107,0.0024993565757763726\n",
-      "KP0228_00108,0.0024633674393552715\n",
-      "KP0228_01750,0.0024103644141003143\n",
-      "KP0228_03191,0.002215884154266736\n",
-      "KP0228_01059,0.0020326078987904536\n",
-      "KP0228_04168,0.0018016836294329182\n",
-      "KP0228_04943,0.0017676182845193181\n",
-      "KP0228_02598,0.0016195064283281684\n",
-      "KP0228_04305,0.0016007064941954115\n",
-      "KP0228_03536,0.0015362917947260748\n",
-      "KP0228_00801,0.0013374767721186392\n",
-      "KP0228_00036,0.0013258049319840328\n",
-      "KP0228_02659,0.0012703069589349333\n",
-      "KP0228_03050,0.0011537103006807024\n",
-      "KP0228_03634,0.0011154881344867934\n",
-      "KP0228_00233,0.0009535150806170257\n",
-      "KP0228_03971,0.0009394591510440611\n",
-      "KP0228_02544,0.0009135187533331438\n",
-      "KP0228_03164,0.0008922912497059481\n",
-      "KP0228_02232,0.0008724036491622505\n",
-      "KP0228_01638,0.0007506718085752294\n",
-      "KP0228_02223,0.0006450234537663087\n",
-      "KP0228_00250,0.0006090090266283757\n",
-      "KP0228_00995,0.0006042221181044781\n",
-      "KP0228_03775,0.00048565563026673\n",
-      "KP0228_03241,0.0004669526138791726\n",
-      "KP0228_03084,0.0004525487907856203\n",
-      "KP0228_02357,0.00040976488291972395\n",
-      "KP0228_03419,0.0004029704695979027\n",
-      "KP0228_01631,0.0003933252574987539\n",
-      "KP0228_03478,0.000286952975970103\n",
-      "KP0228_02313,1.286451191174865e-05\n",
-      "KP0228_03605,5.260549223812085e-06\n"
-     ]
-    }
-   ],
-   "source": [
-    "from collections import defaultdict\n",
-    "import csv\n",
-    "import numpy as np\n",
-    "modelName = \"GBTC\"\n",
-    "modelDict = allDataModelDict[\"dataset_10_\"][modelName]\n",
-    "# dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\"\n",
-    "dataPath = \"data/MLData/largeData/dataset_10_train.csv\"\n",
-    "# modelDict = modelDictAll[\"GBTC\"]\n",
-    "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
-    "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
-    "featureTransformer = bestModel.steps[0][1]\n",
+    "# assert False, \"This code is deprecated. Please see the notebook titled `FeatureImportance`\"\\\n",
+    "#     \"To print feature importance\"\n",
+    "# from collections import defaultdict\n",
+    "# import csv\n",
+    "# import numpy as np\n",
+    "# modelName = \"GBTC\"\n",
+    "# modelDict = allDataModelDict[\"dataset_10_\"][modelName]\n",
+    "# # dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\"\n",
+    "# dataPath = \"data/MLData/largeData/dataset_10_train.csv\"\n",
+    "# # modelDict = modelDictAll[\"GBTC\"]\n",
+    "# bestModel = modelDict[\"gridcv\"].best_estimator_\n",
+    "# bestModel = modelDict[\"gridcv\"].best_estimator_\n",
+    "# featureTransformer = bestModel.steps[0][1]\n",
     "\n",
-    "isolateList = []\n",
-    "with open(dataPath) as fp:\n",
-    "    csvReader = csv.reader(fp)\n",
-    "    header = next(csvReader)\n",
-    "if len(header) > 100000:\n",
-    "    print(\"Reading large data with more efficient code\")\n",
-    "    with open(dataPath) as fp:\n",
-    "        csvReader = csv.reader(fp)\n",
-    "        header = next(csvReader)\n",
-    "        for line in csvReader:\n",
-    "            isolateList.append(line[0])\n",
-    "    # print(\"isolates:\", isolateList[0:10])\n",
-    "    df = np.loadtxt(dataPath, delimiter = \",\", skiprows = 1, usecols = range(1, len(header))) \n",
-    "    df = pd.DataFrame(df, columns = header[1:])\n",
-    "    df.insert(loc = 0, column = \"isolate\", value = isolateList) \n",
-    "        # print(time.time() - start) \n",
-    "        # allData = pd.read_csv(trainPath, dtype = myDtypes)\n",
-    "        # allData = np.loadtxt(trainPath, delimiter = \",\", skiprows = 1,\n",
-    "        #     usecols = range(1, len(header))) \n",
-    "else:\n",
-    "    df = pd.read_csv(dataPath)\n",
+    "# isolateList = []\n",
+    "# with open(dataPath) as fp:\n",
+    "#     csvReader = csv.reader(fp)\n",
+    "#     header = next(csvReader)\n",
+    "# if len(header) > 100000:\n",
+    "#     print(\"Reading large data with more efficient code\")\n",
+    "#     with open(dataPath) as fp:\n",
+    "#         csvReader = csv.reader(fp)\n",
+    "#         header = next(csvReader)\n",
+    "#         for line in csvReader:\n",
+    "#             isolateList.append(line[0])\n",
+    "#     # print(\"isolates:\", isolateList[0:10])\n",
+    "#     df = np.loadtxt(dataPath, delimiter = \",\", skiprows = 1, usecols = range(1, len(header))) \n",
+    "#     df = pd.DataFrame(df, columns = header[1:])\n",
+    "#     df.insert(loc = 0, column = \"isolate\", value = isolateList) \n",
+    "#         # print(time.time() - start) \n",
+    "#         # allData = pd.read_csv(trainPath, dtype = myDtypes)\n",
+    "#         # allData = np.loadtxt(trainPath, delimiter = \",\", skiprows = 1,\n",
+    "#         #     usecols = range(1, len(header))) \n",
+    "# else:\n",
+    "#     df = pd.read_csv(dataPath)\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "df = df.set_index(\"isolate\")\n",
-    "X_df = df.drop(labels = [\"pbr_res\"], axis = 1)\n",
-    "X = X_df.values\n",
-    "allFeatureNames = np.array(list(X_df))\n",
-    "chosenFeatures = allFeatureNames[[featureTransformer.transform(np.arange(X.shape[1]).reshape([1, X.shape[1]]))]]\n",
-    "chosenFeatures = chosenFeatures[0]\n",
+    "# df = df.set_index(\"isolate\")\n",
+    "# X_df = df.drop(labels = [\"pbr_res\"], axis = 1)\n",
+    "# X = X_df.values\n",
+    "# allFeatureNames = np.array(list(X_df))\n",
+    "# chosenFeatures = allFeatureNames[[featureTransformer.transform(np.arange(X.shape[1]).reshape([1, X.shape[1]]))]]\n",
+    "# chosenFeatures = chosenFeatures[0]\n",
     "\n",
     "\n",
-    "# print(bestModelParams_GBTC.feature_importances_)\n",
-    "bestModelParams = bestModel.get_params()[modelName]\n",
-    "if modelName == \"GBTC\":\n",
-    "    print(\"feature importance for GBTC\")\n",
-    "#     bestModelParams = bestModel.get_params()[modelName]\n",
-    "#     print(\"{} features passed to this model\".format(len(bestModelParams.feature_importances_))) # for GBTC\n",
-    "#     print(\"{} features given feature importance above 0\\n\".format(sum(bestModelParams.feature_importances_ > 0)))\n",
-    "    featureImportance = bestModelParams.feature_importances_\n",
-    "elif modelName == \"logistic\":\n",
-    "    print(\"Feature importance logistic\")\n",
-    "#     print(\"{} features passed to this model\".format(len(bestModelParams.coef_[0]))) # for ligistic\n",
-    "#     print(\"{} features given feature importance above 0\\n\".format(sum(bestModelParams.coef_[0] != 0)))\n",
-    "    featureImportance = bestModelParams.coef_[0]\n",
-    "featureImportance = featureImportance\n",
-    "# importanceOrder = np.argsort(np.abs(featureImportance))[::-1]\n",
-    "# # print(importanceOrder)\n",
-    "# # print(np.argsort(featureImportance)[::-1])\n",
-    "# # print(featureImportance)\n",
-    "# # 1/0\n",
-    "# featureImportance = featureImportance[importanceOrder]\n",
+    "# # print(bestModelParams_GBTC.feature_importances_)\n",
+    "# bestModelParams = bestModel.get_params()[modelName]\n",
+    "# if modelName == \"GBTC\":\n",
+    "#     print(\"feature importance for GBTC\")\n",
+    "# #     bestModelParams = bestModel.get_params()[modelName]\n",
+    "# #     print(\"{} features passed to this model\".format(len(bestModelParams.feature_importances_))) # for GBTC\n",
+    "# #     print(\"{} features given feature importance above 0\\n\".format(sum(bestModelParams.feature_importances_ > 0)))\n",
+    "#     featureImportance = bestModelParams.feature_importances_\n",
+    "# elif modelName == \"logistic\":\n",
+    "#     print(\"Feature importance logistic\")\n",
+    "# #     print(\"{} features passed to this model\".format(len(bestModelParams.coef_[0]))) # for ligistic\n",
+    "# #     print(\"{} features given feature importance above 0\\n\".format(sum(bestModelParams.coef_[0] != 0)))\n",
+    "#     featureImportance = bestModelParams.coef_[0]\n",
+    "# featureImportance = featureImportance\n",
+    "# # importanceOrder = np.argsort(np.abs(featureImportance))[::-1]\n",
+    "# # # print(importanceOrder)\n",
+    "# # # print(np.argsort(featureImportance)[::-1])\n",
+    "# # # print(featureImportance)\n",
+    "# # # 1/0\n",
+    "# # featureImportance = featureImportance[importanceOrder]\n",
     "\n",
-    "# chosenFeatures = chosenFeatures[importanceOrder]\n",
+    "# # chosenFeatures = chosenFeatures[importanceOrder]\n",
     "\n",
-    "featureImportanceDict = defaultdict(int) # features and coefficients line up\n",
-    "# but because there can be multiple for logistic regression this needs to be \n",
-    "# added together.\n",
-    "for feat, imp in zip(chosenFeatures, featureImportance):\n",
-    "    featureImportanceDict[feat] += imp\n",
+    "# featureImportanceDict = defaultdict(int) # features and coefficients line up\n",
+    "# # but because there can be multiple for logistic regression this needs to be \n",
+    "# # added together.\n",
+    "# for feat, imp in zip(chosenFeatures, featureImportance):\n",
+    "#     featureImportanceDict[feat] += imp\n",
     "\n",
-    "nNonZeroFeats = 0\n",
-    "for _, imp in featureImportanceDict.items():\n",
-    "    if imp != 0.0:\n",
-    "        nNonZeroFeats += 1\n",
-    "featureImportanceTupleLit = sorted(featureImportanceDict.items(),\n",
-    "                                   key=lambda p:np.abs(p[1]), reverse = True)# sorting list    \n",
-    "\n",
-    "\n",
-    "print(\"{} features passed to this model\".format(len(chosenFeatures))) # for logistic\n",
-    "print(\"{} unique features passed to this model\".format(len(set(chosenFeatures)))) # for logistic\n",
-    "print(\"{} features given feature importance above 0\\n\".format(nNonZeroFeats))\n",
-    "\n",
-    "for feature, importanceMeasure in featureImportanceTupleLit:\n",
-    "    if importanceMeasure != 0.0:\n",
-    "        print(\"Feature {} coefficient/importance {}\\n\".format(feature, importanceMeasure))\n",
+    "# nNonZeroFeats = 0\n",
+    "# for _, imp in featureImportanceDict.items():\n",
+    "#     if imp != 0.0:\n",
+    "#         nNonZeroFeats += 1\n",
+    "# featureImportanceTupleLit = sorted(featureImportanceDict.items(),\n",
+    "#                                    key=lambda p:np.abs(p[1]), reverse = True)# sorting list    \n",
     "\n",
     "\n",
-    "print(\"featureName,importanceMetric\")\n",
-    "for feature, importanceMeasure in featureImportanceTupleLit:\n",
-    "    if importanceMeasure != 0.0:\n",
-    "        print(\"{},{}\".format(feature, importanceMeasure))\n"
+    "# print(\"{} features passed to this model\".format(len(chosenFeatures))) # for logistic\n",
+    "# print(\"{} unique features passed to this model\".format(len(set(chosenFeatures)))) # for logistic\n",
+    "# print(\"{} features given feature importance above 0\\n\".format(nNonZeroFeats))\n",
+    "\n",
+    "# for feature, importanceMeasure in featureImportanceTupleLit:\n",
+    "#     if importanceMeasure != 0.0:\n",
+    "#         print(\"Feature {} coefficient/importance {}\\n\".format(feature, importanceMeasure))\n",
+    "\n",
+    "\n",
+    "# print(\"featureName,importanceMetric\")\n",
+    "# for feature, importanceMeasure in featureImportanceTupleLit:\n",
+    "#     if importanceMeasure != 0.0:\n",
+    "#         print(\"{},{}\".format(feature, importanceMeasure))\n"
    ]
   },
   {
